--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -49,7 +49,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	
 }
 
-.handbox {
+.Handkarten {
 	display: inline-block;
 	margin: 10px;
 	border: solid thin black;
@@ -57,7 +57,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	
 	}
 
-.red{
+.Red{
 	background-color: #f73429;
 	width:116px;
 	height:185px;
@@ -77,7 +77,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	
 	}
 
-.blue{
+.Blue{
 	background-color: #2c57d2;
 	width:116px;
 	height:185px;
@@ -96,7 +96,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	
 }
 
-.green{
+.Green{
 	background-color: #008a4e;
 	width:116px;
 	height:185px;
@@ -117,7 +117,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	}
 	
 	
-.yellow{	
+.Yellow{	
 	background-color: #ffe300;
 	width:116px;
 	height:185px;
@@ -135,7 +135,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	margin-right: 20px;
 	}
 
-.black{
+.Black{
 	background-color: black;
 	width:116px;
 	height:185px;
