--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -49,7 +49,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	
 }
 
-.handBox {
+.Handkarten {
 	display: inline-block;
 	margin: 10px;
 	border: solid thin black;
