--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -14,10 +14,10 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	border-radius: 25px;
 	position: absolute;
 	right: 400px;
-	top: 40px;
-	font-family: 'Source Sans Pro', sans-serif;
+	top: 140px;
+	font-family: 'Arial', sans-serif;
 	text-align: center;
-	color: #FFD700;
+	color: white;
 }
 
 #Nachziehstapel {
@@ -28,10 +28,10 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	border-radius: 25px;
 	position: absolute;
 	left: 400px;
-	top: 40px;
-	font-family: 'Source Sans Pro', sans-serif;
+	top: 140px;
+	font-family: 'Arial', sans-serif;
 	text-align: center;
-	color: #FFD700;
+	color: white;
 }
 
 #Handkarten {
@@ -57,7 +57,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	outline: solid thin black;
 	border: solid thick white;
 	top: 10px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Arial', sans-serif;
 	text-shadow: 3px 2px black;
 	font-size: 30pt;
 	text-align: center;
@@ -75,7 +75,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	outline: solid thin black;
 	border: solid thick white;
 	top: 10px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Arial', sans-serif;
 	text-shadow: 3px 2px black;
 	font-size: 30pt;
 	text-align: center;
@@ -93,7 +93,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	outline: solid thin black;
 	border: solid thick white;
 	top: 10px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Arial', sans-serif;
 	text-shadow: 3px 2px black;
 	font-size: 30pt;
 	text-align: center;
@@ -111,11 +111,11 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	outline: solid thin black;
 	border: solid thick white;
 	top: 10px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Arial', sans-serif;
 	text-shadow: 3px 2px black;
 	font-size: 30pt;
 	text-align: center;
-	color: white;
+	color: black;
 	border-radius: 5px;
 	box-sizing: border-box;
 	margin-left: 20px;
@@ -129,7 +129,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	outline: solid thin black;
 	border: solid thick white;
 	top: 10px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Arial', sans-serif;
 	text-shadow: 3px 2px black;
 	font-size: 30pt;
 	text-align: center;
