--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -18,6 +18,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	font-family: 'Arial', sans-serif;
 	text-align: center;
 	color: white;
+	font-size: 0.9em;
 }
 
 #Nachziehstapel {
@@ -32,6 +33,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	font-family: 'Arial', sans-serif;
 	text-align: center;
 	color: white;
+	font-size: 0.9em;
 }
 
 #Handkarten {
