--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -14,11 +14,12 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	border-radius: 25px;
 	position: absolute;
 	right: 400px;
-	top: 340px;
+	top: 140px;
 	font-family: 'Arial', sans-serif;
 	text-align: center;
 	color: white;
 	font-size: 0.9em;
+	padding-top: 50px;
 }
 
 #Nachziehstapel {
@@ -29,11 +30,12 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	border-radius: 25px;
 	position: absolute;
 	left: 400px;
-	top: 340px;
+	top: 140px;
 	font-family: 'Arial', sans-serif;
 	text-align: center;
 	color: white;
 	font-size: 0.9em;
+	padding-top: 50px;
 }
 
 #Handkarten {
