Aufgabe2 neu überarbeitet

--- a/Aufgabe2/Aufgabe2.css
+++ b/Aufgabe2/Aufgabe2.css
@@ -48,7 +48,7 @@ mit Unterstützung von Lukas und Anna geschrieben habe. Er wurde nicht kopiert un
 	position: absolute;
 }
 
-.Handkarten {
+.newBox {
 	display: inline-block;
 	margin: 10px;
 	border: solid thin black;
